sm8250-common: parts: Implement dc dimming
Squash of the following commits:
- parts: Move dc dimming to Settings > Display
- parts: Implement dc dimming preference
- parts: Disable dc dimming if it's not supported
- parts: Add DC-Dimming QS tile
- sepolicy: Address DC Dimming denial

Co-authored-by: Arian <arian.kulmer@web.de>
Change-Id: I048371e23c68eae199b429169866af864cc03daf
Signed-off-by: Carlos Ayrton Lopez Arroyo <15030201@itcelaya.edu.mx>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -159,6 +159,10 @@ on boot
     chmod 0664 /sys/class/power_supply/battery/dc_thermal_levels
     chown system system /sys/class/thermal/thermal_message/sconfig
 
+    # Allow system to modify exposure adjustment state
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+    chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+
     # Load all wlan drivers
     exec_background u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ qca_cld3_qca6390 qca_cld3_qca6490
 
