sm8250-common: adapt to S activity for touchsampling

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -123,7 +123,7 @@
         <activity
             android:name=".touchsampling.TouchSamplingSettingsActivity"
             android:label="@string/htsr_enable_title"
-            android:theme="@style/Theme.Main">
+            android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
