--- a/wifi/qca6390/WCNSS_qcom_cfg.ini
+++ b/wifi/qca6390/WCNSS_qcom_cfg.ini
@@ -285,6 +285,8 @@ maxMSDUsPerRxInd=8
 gEnableNanSupport=1
 # Enable NAN Datapath
 genable_nan_datapath=1
+# Separate iface creation for NAN
+nan_separate_iface_support=1
 
 ################ NAN feature set end #####################
 
@@ -358,6 +360,9 @@ AutoChannelSelectWeight=0x00fafafa
 # Enable/Disable broadcast TWT
 bcast_twt=1
 
+# Stop auto-creating twt session
+twt_congestion_timeout=0
+
 # Enable broadcast logging to the userspace entities
 gMulticastHostFwMsgs=1
 # Disable packetlog explicitly
@@ -369,7 +374,7 @@ gIPAMediumBandwidthMbps=400
 gIPAHighBandwidthMbps=800
 
 # Add another interface while driver load
-gEnableConcurrentSTA=wlan1
+#gEnableConcurrentSTA=wlan1
 
 #max time for active 2G channel scan.
 #if set to zero, gActiveMaxChannelTime is used for 2G channel scan.
@@ -407,6 +412,11 @@ chan_width_weightage=5
 he_caps_weightage=1
 chan_band_weightage=5
 
+# Reduce the expiry time for avoid list and black list in drv.
+avoid_list_expiry_time=3
+black_list_expiry_time=3
+# Improve threshold to move the Ap from avoid to blacklist
+bad_bssid_counter_thresh=7
 END
 
 # Note: Configuration parser would not read anything past the END marker
